# Ros2_POC

./: .gitignore  .gitmodules  BUILD.md  requirements.txt  y  y.pub
.claude/: settings.json  settings.local.json
cynlr_arm_controllers/: CMakeLists.txt  cynlr_controllers_plugin.xml  package.xml
cynlr_arm_controllers/cynlr_arm_services/include/cynlr_arm_services/: cynlr_arm_services.hpp
cynlr_arm_controllers/cynlr_arm_services/src/: cynlr_arm_services.cpp
cynlr_arm_controllers/cynlr_cartesian_controller/include/cynlr_cartesian_controller/: cynlr_cartesian_controller.hpp
cynlr_arm_controllers/cynlr_cartesian_controller/src/: cynlr_cartesian_controller.cpp
cynlr_arm_controllers/cynlr_direct_command_controller/include/cynlr_direct_command_controller/: cynlr_direct_command_controller.hpp
cynlr_arm_controllers/cynlr_direct_command_controller/src/: cynlr_direct_command_controller.cpp
cynlr_arm_controllers/cynlr_nrt_passthrough_controller/include/cynlr_nrt_passthrough_controller/: cynlr_nrt_passthrough_controller.hpp
cynlr_arm_controllers/cynlr_nrt_passthrough_controller/src/: cynlr_nrt_passthrough_controller.cpp
cynlr_arm_controllers/cynlr_state_broadcaster/include/cynlr_state_broadcaster/: cynlr_state_broadcaster.hpp
cynlr_arm_controllers/cynlr_state_broadcaster/src/: cynlr_state_broadcaster.cpp
cynlr_arm_core/: CMakeLists.txt
cynlr_arm_core/.claude/: settings.local.json
cynlr_arm_core/cmake/: cynlr_arm_coreConfig.cmake.in
cynlr_arm_core/include/cynlr_arm_core/: arm_factory.hpp  arm_interface.hpp  error.hpp  export.hpp  types.hpp
cynlr_arm_core/include/cynlr_arm_core/capabilities/: digital_io_controllable.hpp  force_controllable.hpp  impedance_configurable.hpp  null_space_configurable.hpp
cynlr_arm_core/src/: arm_factory.cpp
cynlr_arm_core/src/flexiv/: flexiv_arm.cpp  flexiv_arm.hpp
cynlr_arm_core/src/sim/: sim_arm.cpp  sim_arm.hpp
cynlr_arm_core/tests/unit/: test_factory.cpp  test_sim_arm.cpp
cynlr_arm_description/: CMakeLists.txt  package.xml
cynlr_arm_description/rviz/: cynlr_system.rviz
cynlr_arm_description/urdf/: cynlr_arm_system.urdf.xacro  cynlr_rizon7_macro.urdf.xacro
cynlr_arm_interfaces/: CMakeLists.txt  package.xml
cynlr_arm_interfaces/action/: MoveJ.action  MoveL.action  MovePTP.action
cynlr_arm_interfaces/msg/: ArmState.msg  CartesianCommand.msg  FaultEvent.msg  JointCommand.msg  OperationalStatus.msg
cynlr_arm_interfaces/srv/: Connect.srv  GetDigitalInputs.srv  GetTool.srv  SetDigitalOutputs.srv  SetMode.srv  SetTool.srv  SwitchController.srv  Trigger.srv
cynlr_arm_node/: CMakeLists.txt  package.xml
cynlr_arm_node/include/cynlr_arm_node/: cynlr_arm_node.hpp
cynlr_arm_node/src/: cynlr_arm_node.cpp  cynlr_main.cpp
cynlr_arm_service/: CMakeLists.txt  package.xml
cynlr_arm_service/config/: flexiv.yaml  sim.yaml
cynlr_arm_service/include/cynlr_arm_service/: arm_service_node.hpp  mode_manager.hpp  rt_thread.hpp
cynlr_arm_service/launch/: arm_service.launch.py
cynlr_arm_service/src/: arm_service_node.cpp  main.cpp  mode_manager.cpp  rt_thread.cpp
cynlr_arm_service/tests/integration/: test_arm_service.cpp  test_arm_service.launch.py
cynlr_bringup/: CMakeLists.txt  package.xml
cynlr_bringup/config/: cynlr_controllers.yaml  cynlr_single_arm_config.yaml  cynlr_system_config.yaml
cynlr_bringup/launch/: cynlr_system.launch.py
cynlr_bt_manager/: CMakeLists.txt  package.xml
cynlr_bt_manager/bt_action_nodes/: bt_movej.cpp
cynlr_bt_manager/include/cynlr_bt_manager/: bt_movej.hpp
cynlr_bt_manager/src/: cynlr_bt_manager_main.cpp  tree.xml
cynlr_bt_manager/trees/: cynlr_template_tree.xml  example.xml
cynlr_camera/: CMakeLists.txt  package.xml
cynlr_camera/config/: camera_config.yaml
cynlr_camera/include/cynlr_camera/: stereo_camera_node.hpp
cynlr_camera/launch/: stereo_camera.launch.py
cynlr_camera/src/: main.cpp  stereo_camera_node.cpp
cynlr_hardware/: CMakeLists.txt  cynlr_hardware_plugin.xml  package.xml
cynlr_hardware/include/cynlr_hardware/: cynlr_hardware_interface.hpp
cynlr_hardware/src/: cynlr_hardware_interface.cpp
cynlr_moveit_config/: CMakeLists.txt  package.xml
cynlr_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  sensors_3d.yaml
cynlr_moveit_config/srdf/: cynlr_rizon7_macro.srdf.xacro  cynlr_three_arm.srdf.xacro
cynlr_robot/: CMakeLists.txt  cynlr_robot_plugin.xml  package.xml
cynlr_robot/include/cynlr_robot/: cynlr_arm_handle.hpp  cynlr_arm_registry.hpp  cynlr_robot_interface.hpp
cynlr_robot/src/: cynlr_arm_registry.cpp  cynlr_robot_interface.cpp
docs/superpowers/specs/: 2026-04-13-robot-arm-service-design.md
thoughts/shared/docs/: architecture.md
thoughts/shared/plans/: 2026-04-13-robot-arm-service.md
