<?xml version="1.0"?>
<package format="3">
  <name>cynlr_arm_interfaces</name>
  <version>0.1.0</version>
  <description>ROS2 message/service/action interfaces for CynLR arm service</description>
  <maintainer email="satwik.agarwal@cynlr.com">Satwik Agarwal</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
