<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>cynlr_bt_manager</name>
<version>0.0.1</version>
<description>BehaviorTree.CPP + ROS 2 proof of concept</description>
<maintainer email="you@example.com">You</maintainer>
<license>Apache-2.0</license>

<buildtool_depend>ament_cmake</buildtool_depend>

<depend>rclcpp</depend>
<depend>rclcpp_action</depend>
<depend>behaviortree_cpp</depend>
<depend>behaviortree_ros2</depend>
<depend>std_msgs</depend>
<depend>std_srvs</depend>
<depend>nav2_msgs</depend>
<depend>ament_index_cpp</depend>        <!-- ✅ added -->

  <buildtool_depend>ament_cmake</buildtool_depend>
<export>
  <build_type>ament_cmake</build_type>
</export>
</package>
