<?xml version="1.0"?>
<package format="3">
  <name>cynlr_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt configuration for the CynLR three-arm system</description>
  <maintainer email="satwik.agarwal@cynlr.com">Satwik Agarwal</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>cynlr_arm_description</exec_depend>
  <exec_depend>cynlr_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
