<?xml version="1.0"?>
<package format="3">
  <name>cynlr_robot</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface plugin for CynLR robot arms</description>
  <maintainer email="satwik.agarwal@cynlr.com">Satwik Agarwal</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <!-- cynlr_arm_core is a Conan package — linked via CMake find_package, not ament -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
